--- a/core/app/views/Outbounds/otherBlank.html
+++ b/core/app/views/Outbounds/otherBlank.html
@@ -21,7 +21,7 @@
         <th>出库单ID</th>
         <td><input type="text" name="outbound.id" value="${outbound?.id}" readonly/></td>
         <th>出库单名称<span style="color:red">*</span></th>
-        <td><input type="text" class="span8" name="outbound.name" required></td>
+        <td><input type="text" class="span8" name="outbound.name" value="${name}" required></td>
         <th>出库日期<span style="color:red">*</span></th>
         <td><input type="date" name="outbound.outboundDate" required></td>
       </tr>
