--- a/core/app/views/Outbounds/_units.html
+++ b/core/app/views/Outbounds/_units.html
@@ -7,7 +7,7 @@
       </label>
     </th>
   #{/if}
-    <th>采购计划ID</th>
+    <th>采购ID</th>
     <th>采购单</th>
     <th>Selling</th>
     <th>产品名称</th>
@@ -21,7 +21,7 @@
     <th>实际出库数量</th>
     <th>包装信息</th>
     <th>仓库名称</th>
-    <th>收货入库记录ID</th>
+    <th>收货入库ID</th>
     <th>阶段</th>
     <th>备注</th>
   </tr>
@@ -38,7 +38,7 @@
     <td><a href="@{Sellings.selling(unit.selling?.sellingId)}" target="_blank">${unit.selling?.sellingId}</a></td>
     <td title="${unit.product.abbreviation}">${unit.product.abbreviation.overLong()}</td>
     <td>${unit.cooperator?.name}</td>
-    <td>${unit.whouse?.name()}</td>
+    <td>${unit.whouse?.name}</td>
     <td style="color:${unit.shipType?.rgb()}">${unit.shipType?.label()}</td>
     <td>${unit.fba?.shipmentId}</td>
     <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
