--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -159,7 +159,7 @@
       </div>
 
       <div class="tab-pane fade" id='otherOut'>
-        <table class="table table-condensed table-bordered" id="data_table">
+        <table class="table table-condensed table-bordered" id="other_table">
           <tr>
             <th style="width:15px;">
               <input type="checkbox" id="checkbox_all" class="checkall">
