--- a/core/app/views/Applys/procures.html
+++ b/core/app/views/Applys/procures.html
@@ -38,7 +38,7 @@
     <div class="input-prepend input-append inline">
       <span class="add-on"><i class="icon-search"></i></span>
       <input type="hidden" name="p.page" value="${p.page}">
-      <input type="text" name="p.search" style="widows: 180px;" value="${p.search}" placeHolder="请款单编号或采购计划ID">
+      <input type="text" name="p.search" style="width: 180px;" value="${p.search}" placeHolder="请款单编号或采购计划ID">
       <button class="btn btn-primary" data-loading>搜索</button>
     </div>
   </div>
