--- a/core/app/views/Payments/_procreApply.html
+++ b/core/app/views/Payments/_procreApply.html
@@ -33,10 +33,9 @@
             #{set punit: fee.procureUnit/}
             #{set records:fee.fixValueRecords()/}
             #{set denyRecords: fee.denyRecords()/}
-          <td>
-              <input type="checkbox" name="paymentUnitIds" value="${fee.id}">
-          </td>
-          <td ${((records.size() + denyRecords.size()) > 0) ? 'data-toggle=\'toggle\'' : ''} data-target='#unit_${fee.id}'>
+          <td><input type="checkbox" name="paymentUnitIds" value="${fee.id}"></td>
+          <td ${((records.size() + denyRecords.size()) > 0) ? 'data-toggle=\'toggle\'' : ''} data-target='#unit_${fee.id}'
+            width="200px;">
               #{if (records.size() + denyRecords.size()) > 0}
                 <i class="icon-reorder"></i>
               #{/if}
@@ -71,7 +70,7 @@
         </tr>
         <tr id="unit_${fee.id}" style="display:none">
           <td colspan="4"></td>
-          <td colspan="3">
+          <td colspan="4">
               #{if records.size() > 0}
                   #{records_ul records: records/}
               #{/if}
