订单model 更改为 数据库一致

--- a/core/app/views/Orders/index.html
+++ b/core/app/views/Orders/index.html
@@ -89,8 +89,13 @@
       </div>
 
       <div class="inline input-append">
-        <input type="button" class="btn btn-success" id="downExcel" value="导出Excel">
+        <input type="button" class="btn btn-success" id="downExcel" value="导出订单Excel">
       </div>
+
+      <div class="inline input-append">
+        <input type="button" class="btn btn-warning" id="downExcel" value="导出订单费用Excel">
+      </div>
+
     </div>
   </form>
 </div>
