--- a/core/app/views/Refunds/printRefundForm.html
+++ b/core/app/views/Refunds/printRefundForm.html
@@ -12,7 +12,7 @@
 #{list items:ten.keySet().iterator(), as:'p'}
     #{set first_o:ten.get(p).get(0) /}
     #{set totalQty: 0/}
-    #{set totalBoxNum: 0/}
+    #{set totalPlanQty: 0/}
 <div style="margin:0 0 0 0; height:188mm;width:100%;">
   <table border="0" style="width:290mm;margin:0 0 0 0;">
     <tr style="text-align:center;height:8mm;">
@@ -55,8 +55,7 @@
     </tr>
       #{list items:ten.get(p), as:'i'}
           #{set totalQty: i.qty + totalQty /}
-          #{set totalBoxNum: (i.mainBox?.boxNum==null ? 0 : i.mainBox?.boxNum) +
-          (i.lastBox?.boxNum==null ? 0 : i.lastBox?.boxNum) + totalBoxNum /}
+          #{set totalPlanQty: i.planQty + totalPlanQty/}
           #{set rowNum: i.lastBox?.num > 0 ? 2 : 1 /}
           #{set fontSize: i.lastBox?.num > 0 ? 9 : 13 /}
         <tr>
@@ -123,8 +122,8 @@
       <td></td>
       <td></td>
       <td></td>
+      <td>${totalPlanQty}</td>
       <td>${totalQty}</td>
-      <td>${totalBoxNum}</td>
       <td></td>
       <td></td>
       <td></td>
