订单费用报表开发

--- a/core/app/views/Orders/index.html
+++ b/core/app/views/Orders/index.html
@@ -102,7 +102,7 @@
       </div>
 
       <div class="inline input-append">
-        <input type="button" class="btn btn-warning" id="downExcel" value="导出订单费用Excel">
+        <input type="button" class="btn btn-warning" id="downSaleFeeExcel" value="导出订单费用Excel">
       </div>
 
     </div>
