创建selling页面填充时，可以填充 产品描述和Recommanded Browser Nodes

--- a/core/app/views/Sellings/_saleAmazon.html
+++ b/core/app/views/Sellings/_saleAmazon.html
@@ -7,7 +7,7 @@
       #{text_field id:'brand', name: 's.aps.brand', label: '品牌', value: "${models.OperatorConfig.getVal("addressname")}"/}
       #{text_field id:'standerPrice', name: 's.aps.standerPrice', label: '标准价格', value: '' /}
       #{text_field id:'startDate', name: 's.aps.startDate', label: '优惠价格开始日期',  value: '2013-12-01' /}
-      #{text_field id:'RBN', name: 's.aps.rbns[]', label: 'Recommanded Browser Nodes',  value: '' /}
+      #{text_field id:'RBN', name: 's.aps.rbns[0]', label: 'Recommanded Browser Nodes',  value: '' /}
       #{text_field id:'itemType', name: 's.aps.itemType', label: 'ItemType',  value: '' /}
       #{checkbox_wrap id:'giftwrap', label: '附加选项'}
         <label class="checkbox">
