--- a/core/app/views/tags/tsp_show_template.html
+++ b/core/app/views/tags/tsp_show_template.html
@@ -3,6 +3,10 @@
 
   <p><%= tsp['title']%></p>
 
+  <h3>Recommanded Browser Nodes</h3>
+
+  <p><%= tsp['rbn'][0]%></p>
+
   <h3>Product Desc</h3>
 
   <p><%= tsp['p'][0] %></p>
