开发 收货入库明细列表

--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -213,6 +213,9 @@
                 #{power.ck 'inbounds.index'}
                   <li><a href="@{Inbounds.index()}">质检入库</a></li>
                 #{/power.ck}
+                #{power.ck 'inbounds.indexdetail'}
+                  <li><a href="@{Inbounds.indexDetail()}">收货入库明细</a></li>
+                #{/power.ck}
                 #{power.ck "refunds.unqualifiedindex"}
                   <li><a href="@{Refunds.unQualifiedIndex()}">不良品处理</a></li>
                 #{/power.ck}
