添加采购计划每日下单面板

--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -119,7 +119,9 @@
                 #{power.ck "procures.btborderindex"}
                   <li><a href="@{Orders.btbOrderIndex()}">B2B销售订单信息</a></li>
                 #{/power.ck}
-
+                #{power.ck "procures.datapanel"}
+                  <li><a href="@{ProcureUnits.dataPanel()}">日均采购计划</a></li>
+                #{/power.ck}
             </ul>
           </li>
         #{/power.ck}
