批量申请中期付款开发

--- a/core/app/views/Applys/procure.html
+++ b/core/app/views/Applys/procure.html
@@ -2,6 +2,7 @@
 #{set title:"请款单 ${apply.serialNumber}" /}
 #{set 'moreScripts'}
     #{script 'deliveryments/procure.coffee'/}
+    #{script 'deliveryments/procure.es6'/}
 #{/set}
 #{flash_alert /}
 <div class="row-fluid">
