打印页面增加 页码显示

--- a/core/app/views/Inbounds/printQuaternionForm.html
+++ b/core/app/views/Inbounds/printQuaternionForm.html
@@ -137,9 +137,10 @@
   </table>
   <table border="0" style="width:290mm;margin:0 0 0 0;">
     <tr style="height:9mm;">
-      <td width="40%;">制单：</td>
+      <td width="30%;">制单：</td>
       <td width="30%;">质检：</td>
       <td width="30%;">入库：</td>
+      <td width="10%;" style="text-align:right;font-size:9px;">总共${ten.size()}页，当前${p_index}页</td>
     </tr>
   </table>
 </div>
