--- a/core/app/views/Outbounds/printOutboundForm.html
+++ b/core/app/views/Outbounds/printOutboundForm.html
@@ -179,8 +179,9 @@
   </table>
   <table border="0" style="width:290mm;margin:0 0 0 0;">
     <tr style="height:9mm;">
-      <td width="60%;">发货：</td>
+      <td width="50%;">发货：</td>
       <td width="40%;">提货：</td>
+      <td width="10%;" style="text-align:right;font-size:9px;">总共${ten.size()}页，当前${p_index}页</td>
     </tr>
   </table>
 </div>
