调整页面td显示宽度

--- a/core/app/views/Shipments/_shipment.html
+++ b/core/app/views/Shipments/_shipment.html
@@ -10,7 +10,7 @@
 
     <tr>
       <th>运输单号</th>
-      <td>
+      <td width="40%;">
         <input type="text" id="shipmentId" name="shipid" value="${ship.id}" readonly>
       </td>
       <th width="200px;">创建时间</th>
