--- a/core/app/views/Inbounds/indexDetail.html
+++ b/core/app/views/Inbounds/indexDetail.html
@@ -67,6 +67,7 @@
           <span class="add-on"><i class="icon-search"></i></span>
           <input type="text" style="width:220px;" name="p.search" placeholder="收货入库单ID or SKU or 采购计划ID" value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
+          <input type="hidden" name="p.searchPage" value="${p.searchPage}">
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
 
