--- a/core/app/views/ReportDownloads/applyReportsIndex.html
+++ b/core/app/views/ReportDownloads/applyReportsIndex.html
@@ -208,3 +208,23 @@
     </div>
   </div>
 </div>
+
+<div class="row-fluid">
+  <div class="span12">
+    <div class="bs-docs-form">
+      <form class="search_form" action="@{Excels.exportInventoryCostsReport()}" target="_blank">
+        <span class="label label-info">库存占用资金报表:</span>
+
+        <span style="margin-left:10px;">年份:</span>
+      #{select_year class:'span1', name:'year', value: new org.joda.time.DateTime().getYear()/}
+        &nbsp;
+
+        <span class="add-on">月份:</span>
+      #{select_all_month  class:'span1', name: "month", value: new org.joda.time.DateTime().getMonthOfYear()/}
+        &nbsp;
+        <button class="btn">导出</button>
+      </form>
+    </div>
+  </div>
+</div>
+
