--- a/core/app/views/ShipItems/index.html
+++ b/core/app/views/ShipItems/index.html
@@ -50,7 +50,7 @@
 </div>
 
 <div class="row-fluid">
-  <form action="@{Shipments.procureUnitToShipment()}" method="POST" id="new_shipment">
+  <form action="@{Shipments.procureUnitToShipment()}" method="POST" id="new_shipment" class="search_form">
     <table class="table table-bordered table-condensed">
       <tr>
         <th><input type="checkbox" class="checkall"></th>
@@ -58,6 +58,7 @@
         <th>阶段</th>
         <th>SKU</th>
         <th width="130px;">数量(计划/交货/入库)</th>
+        <th>可用库存</th>
         <th>供应商</th>
         <th>重量</th>
         <th>仓库</th>
@@ -87,6 +88,7 @@
         <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
         <td><a href="@{Products.show(unit.sku)}" target="_blank">${unit.sku}</a></td>
         <td>${unit.attrs.planQty}/${unit.attrs.qty}/${unit.inboundQty}</td>
+        <td>${unit.availableQty}</td>
         <td>${unit.cooperator?.name}</td>
         <td>${unit.totalWeight()} kg</td>
         <td>${unit.whouse?.name}</td>
@@ -107,13 +109,18 @@
     #{/list}
     </table>
 
-    <div>
-      <div class="btn-group">
-        <button class="btn btn-success adjust" data-confirm='确认要创建吗?' data-disable-with='创建中...'>
-          创建运输单
-        </button>
-      </div>
+    <div class="btn-toolbar">
+      <select name="shipmentId" class="inline selectize" style="width:180px;">
+        <option value="">新运输单</option>
+      #{list items:shipments, as:'s'}
+        <option value="${s.id}">${s.id}</option>
+      #{/list}
+      </select>
+      <button class="btn btn-success" data-confirm='确认要创建吗?' data-disable-with='创建中...'>
+        创建运输单
+      </button>
     </div>
+    
   </form>
 </div>
 
