--- a/core/app/views/StockRecords/indexHistoryStock.html
+++ b/core/app/views/StockRecords/indexHistoryStock.html
@@ -61,11 +61,10 @@
         <th width="200px;">SKU</th>
         <th>名称</th>
         <th width="120px;">仓库</th>
-        <th width="60px;">入库数</th>
         <th width="60px;">可用库存</th>
-        <th width="60px;">不良品数</th>
         <th>预计收货时间</th>
         <th>实际收货时间</th>
+        <th>实际出库时间</th>
         <th width="120px;">FBA-ShipmentId</th>
         <th>项目名称</th>
       </tr>
@@ -78,11 +77,10 @@
         <td>${u.sku}</td>
         <td rel="tooltip" title="${u.product?.abbreviation}">${u.product?.abbreviation?.overLong()}</td>
         <td>${u.currWhouse?.name}</td>
-        <td>${u.inboundQty}</td>
         <td>${u.currQty}</td>
-        <td>${u.unqualifiedQty}</td>
         <td>#{time_tooltip time:u.attrs.planDeliveryDate/}</td>
         <td>#{time_tooltip time:u.attrs.deliveryDate/}</td>
+        <td>#{time_tooltip time:u.outbound?.outboundDate/}</td>
         <td>${u.fba?.shipmentId}</td>
         <td>${u.projectName}</td>
       </tr>
